--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inderbir Gill </title>
-    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -153,7 +156,8 @@
     <nav id="navbar">
         <div class="container">
             <div class="nav-container">
-                <div class="nav-logo"> inderbirsgill </div>
+                <div class="nav-logo"> ਇੰਦਰਬੀਰ</div>
+                <!-- ਇੰਦਰਬੀਰ ਸਿੰਘ ਗਿੱਲ -->
                 <div class="nav-links">
                     <a href="#home">Home</a>
                     <a href="#about">About</a>
@@ -206,7 +210,7 @@
             <div class="hero-content fade-in">
                 <!-- Left Side: Title and Description -->
                 <div class="hero-left">
-                    <h1><span class="gradient-text">Inderbir S. Gill</span></h1>
+                    <h1><span class="gradient-text">Inderbir&nbsp;Singh&nbsp;Gill</span></h1>
                     <div class="typewriter">
                         <span id="roleText"></span><span class="cursor">|</span>
                     </div>
@@ -217,16 +221,23 @@
                 <div class="hero-right">
                     <div class="polaroid-container">
                         <div class="polaroid">
-                            <img src="https://avatars.githubusercontent.com/u/54521546?s=400&u=a98672748f730cba07330f72b51a0f570a5fe7d1&v=4" alt="Photo 1">
+                            <img src="https://lh3.googleusercontent.com/d/1do4tshDf8OIhJUFs4--KU6Rxs4hUr-Gm" alt="Photo 1">
+                            <!-- <img src="https://avatars.githubusercontent.com/u/54521546?s=400&u=a98672748f730cba07330f72b51a0f570a5fe7d1&v=4" alt="Photo 1"> -->
                             <!-- <div class="polaroid-caption">Professional Headshot</div> -->
+                             <!-- 1do4tshDf8OIhJUFs4--KU6Rxs4hUr-Gm -->
                         </div>
                         <div class="polaroid">
-                            <img src="https://media.discordapp.net/attachments/1467253486130434335/1467253915119653109/tree.JPG?ex=697fb631&is=697e64b1&hm=e908628349d2826fc59cf25741b9668c9bb5822baf1ca41d12cd080f8f08ab17&=&format=webp&width=400&height=400" alt="Photo 2">
+                            <!-- <img src="https://drive.google.com/thumbnail?id=$1_G0n63o3Yf3rBdmkd7-Qk-0M5zEo9qkA&&sz=w200-h200" alt="Photo 2"> -->
+
+                            <img src="https://lh3.googleusercontent.com/d/1_G0n63o3Yf3rBdmkd7-Qk-0M5zEo9qkA" alt="Photo 2">
+                            <!-- https://drive.google.com/thumbnail?id=$1_G0n63o3Yf3rBdmkd7-Qk-0M5zEo9qkA&sz=w${width || 200}-h${height || 200} -->
                             <!-- <div class="polaroid-caption">Working on Code</div> -->
                         </div>
                         <div class="polaroid">
-                            <img src="https://media.discordapp.net/attachments/1467253486130434335/1467253533161164860/engineer.JPEG?ex=697fb5d6&is=697e6456&hm=9c04bf10434970045b081960ef362c65aef1e2cde8166882569ac8b6449dcf2e&=&format=webp&width=221&height=300" alt="Photo 3">
+                            <img src="https://lh3.googleusercontent.com/d/1orXHhZXgYp-dTe1BxINSpK_KHisQ5xDX" alt="Photo 1">
+                            <!-- <img src="https://media.discordapp.net/attachments/1467253486130434335/1467253533161164860/engineer.JPEG?ex=697fb5d6&is=697e6456&hm=9c04bf10434970045b081960ef362c65aef1e2cde8166882569ac8b6449dcf2e&=&format=webp&width=221&height=300" alt="Photo 3"> -->
                             <!-- <div class="polaroid-caption">Team Collaboration</div> -->
+                             <!-- 1orXHhZXgYp-dTe1BxINSpK_KHisQ5xDX -->
                         </div>
                     </div>
                 </div>
