--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         .hero { min-height: 100vh; display: flex; align-items: center; justify-content: center; position: relative; overflow: hidden; }
         .hero::before { content: ''; position: absolute; inset: 0; background: linear-gradient(135deg, rgb(0, 0, 0), rgba(0, 0, 0, 0)); }
         .hero-content { text-align: center; position: relative; z-index: 10; }
-        .hero h1 { font-size: 3.5rem; font-weight: bold; margin-bottom: 1rem; }
+        .hero h1 { font-size: 2.5rem; font-weight: bold; margin-bottom: 1rem; line-height: 1.2; word-wrap: break-word; }
         .typewriter { font-size: 1.875rem; color: #b0b0b0; height: 2.5rem; margin-bottom: 2rem; }
         .typewriter span { color: var(--accent); font-weight: 600; }
         .cursor { animation: blink 1s infinite; }
@@ -127,10 +127,14 @@
         @media (min-width: 768px) {
             .nav-links { display: flex; }
             .mobile-menu-btn { display: none; }
-            .hero h1 { font-size: 4.5rem; }
+            .hero h1 { font-size: 3.5rem; }
             .typewriter { font-size: 2.25rem; }
             .hero-buttons { flex-direction: row; }
             .footer-content { flex-direction: row; justify-content: space-between; align-items: flex-start; text-align: left; }
+        }
+        
+        @media (min-width: 1024px) {
+            .hero h1 { font-size: 4rem; }
         }
         
         @media (max-width: 768px) {
@@ -210,7 +214,7 @@
             <div class="hero-content fade-in">
                 <!-- Left Side: Title and Description -->
                 <div class="hero-left">
-                    <h1><span class="gradient-text">Inderbir&nbsp;Singh&nbsp;Gill</span></h1>
+                    <h1><span class="gradient-text">Inderbir Singh Gill</span></h1>
                     <div class="typewriter">
                         <span id="roleText"></span><span class="cursor">|</span>
                     </div>
@@ -339,7 +343,7 @@
                         </div>
                         <div class="project-links">
                             <a href="https://github.com/InderbirSGill/k8s-network-troubleshooting/tree/main" target="_blank">View Code</a>
-                            <a href="https://example.com" target="_blank">Live Demo</a>
+                            <!-- <a href="https://example.com" target="_blank">Live Demo</a> -->
                         </div>
                     </div>
                 </div>
@@ -354,10 +358,10 @@
                             <span class="tech-tag">JavaScript</span>
                             <span class="tech-tag">React</span>
                         </div>
-                        <!-- <div class="project-links">
-                            <a href="https://github.com" target="_blank">View Code</a>
-                            <a href="https://example.com" target="_blank">Live Demo</a>
-                        </div> -->
+                        <div class="project-links">
+                            <a href="https://github.com//j3narciso/CMPE_195_SeniorProject" target="_blank">View Code</a>
+                            <!-- <a href="https://example.com" target="_blank">Live Demo</a> -->
+                        </div>
                     </div>
                 </div>
 
@@ -387,17 +391,17 @@
             <div class="section-title fade-in">
                 <h2>Get In <span class="gradient-text">Touch</span></h2>
                 <div class="divider"></div>
-                <p style="text-align: center; color: #9CA3AF; max-width: 42rem; margin: 0 auto;">I'm always interested in hearing about new projects and opportunities. Whether you have a question or just want to say hi, feel free to reach out!</p>
+                <p style="text-align: center; color: #9CA3AF; max-width: 42rem; margin: 0 auto;">I'm always interested in hearing about new projects and opportunities. Whether you have a question or want your own website, feel free to reach out!!</p>
             </div>
             <div class="contact-form">
-                <form onsubmit="handleSubmit(event)">
+                <form action="https://formspree.io/f/xkozpedz" method="POST">
                     <div class="form-group">
                         <label>Name</label>
                         <input type="text" name="name" required placeholder="Your Name">
                     </div>
                     <div class="form-group">
                         <label>Email</label>
-                        <input type="email" name="email" required placeholder="your.email@example.com">
+                        <input type="email" name="_replyto" required placeholder="your.email@example.com">
                     </div>
                     <div class="form-group">
                         <label>Message</label>
@@ -419,17 +423,17 @@
                     <p>Building digital experiences that matter</p>
                 </div> -->
                 <div class="footer-social">
-                    <a href="https://github.com" target="_blank">
+                    <a href="https://github.com/InderbirSGill" target="_blank">
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
                             <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
                         </svg>
                     </a>
-                    <a href="https://linkedin.com" target="_blank">
+                    <a href="https://linkedin.com/in/inderbirsgill/" target="_blank">
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
                             <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
                         </svg>
                     </a>
-                    <a href="mailto:inderbir@example.com">
+                    <a href="mailto:inderbirsgill@gmail.com">
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/>
                             <polyline points="22,6 12,13 2,6"/>
